@@ -24,6 +24,9 @@
 - NEW: The checkout dialog now has a "show log" button to easier
        find the revision you want to check out from. (Stefan)
 - NEW: Command to check out a specific revision from the log dialog. (Stefan)
+- NEW: Nested layouts are shown in the 'Check for Modifications' dialog
+       to easier spot accidental moves/copies without using the TSVN
+       commands for that. (Stefan)
 - CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
 - CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
 - CHG: Merge dialog: if the 'use from url' is activated, the 'show log'
